[project]
name = "devrev-mcp"
version = "0.1.2"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "requests"
]

[[project.authors]]
name = "Sunil Pandey"
email = "sunil.pandey@devrev.ai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
devrev-mcp = "devrev_mcp:main_cli"
